# logi-pop-ha-bridge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  logi_ha_bridge.py  pyproject.toml  repository.yaml  run.sh
logi_ha_bridge/: button.py  inventory.py  listener.py  mqtt_client.py  runner.py
logi_pop_switches/: Dockerfile  config.yaml  pyproject.toml  run.sh
logi_pop_switches/logi_ha_bridge/: button.py  config.py  mqtt_client.py
tools/: listen_for_logi_buttons.py
